--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,9 +2,37 @@
 
 
 {% block content %}
+    <h1>All Users</h1>
 
-    <h4>Welcome to </h4>
-    <h1> {{title}}</h1>   
-     
-   
+			<table class="table table-hover">
+			        <thead>
+			          <tr>
+			            <th>#</th>
+			            <th> Name</th>
+			            <th> Email</th>
+			            <th> Age</th>
+			          </tr>
+			        </thead>
+		
+
+			        <tbody>
+
+        {% for user in users %}
+
+
+			          <tr>
+			            <td></td>
+			            <td><a href="/users/{{ user.name }}">{{ user.name }}</a></td>
+			            <td>{{user.email }}</td>
+			            <td>{{user.age}} </td>
+			          </tr>
+
+
+        {% endfor %}
+
+			        </tbody>
+			</table>
+
 {% endblock %}
+
+
