--- a/app/views/base.html
+++ b/app/views/base.html
@@ -12,13 +12,13 @@
     
     {% block head %}
 
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="/css/style.css" />
 
 
-        <title>{% block title %}{% endblock %} APP </title>
+        <title>{% block title %}{% endblock %} Blog </title>
     {% endblock %}
 </head>
 
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"> WJS  </a>
+          <a class="navbar-brand" href="/"> BLOG  </a>
         </div>
 
       </div>
@@ -55,7 +55,7 @@
 
     </div>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
