chaged base html

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="/css/style.css" />
 
 
-        <title>{% block title %}{% endblock %} Blog </title>
+        <title>{% block title %}{% endblock %} Wolverine js  </title>
     {% endblock %}
 </head>
 
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"> BLOG  </a>
+          <a class="navbar-brand" href="/"> Wolverine JS  </a>
         </div>
 
       </div>
