--- a/app/views/base.html
+++ b/app/views/base.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/css/style.css" />
 
-
+        <script src="/socket.io/socket.io.js"></script>
         <title>{% block title %}{% endblock %} Wolverine js  </title>
     {% endblock %}
 </head>
@@ -54,8 +54,67 @@
         </div>
 
     </div>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>    
+    <!-- <script src="/js/bootstrap.min.js"></script> -->
+<script>
+
+      (function($){
+         // write code here
+       
+         console.log('working');
+          var socket = io.connect('http://127.0.0.1:3000');
+
+          console.log(socket);
+          socket.on('news', function (data) {
+            console.log(data);
+          }); 
+
+
+
+            socket.on('welcome', function(data) {
+                $('#messages').append('<li>' + data.message + '</li>');
+
+                socket.emit('i am client', {data: 'foo!'});
+            });
+            socket.on('time', function(data) {
+                console.log(data);
+                $('#messages').append('<li>' + data.time + '</li>');
+            });
+            socket.on('error', function() { console.error(arguments) });
+            socket.on('message', function() { console.log(arguments) });
+
+
+
+
+          var content = $('#simple-content');
+          socket.on('connect', function() {
+            $('#simple-form').css('display', 'block');
+            content.append($('<p>').text('Connected'));  
+          });
+           
+          socket.on('message', function(msg) {
+            content.append($('<p>').text(msg)
+                   .append($('<em>').text(' from server')));
+          });
+           
+          $('#simple-form').submit(function(e) {
+            e.preventDefault();
+            var textObj = $('#simple-text');   
+            var msg = textObj.val();
+            textObj.val('');
+            content.append($('<p>').text(msg)
+                   .append($('<em>').text(' from me')));
+            socket.send(msg);
+          });
+
+
+       
+      })(jQuery);
+
+
+</script>
+
+
 </body>
 
 </html>
